k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: devops-demo
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
